--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         body {
-            background-color: #f8f9fa;
+            background-color: #111111;
             font-family: 'Inter', sans-serif;
             display: flex;
             flex-direction: column;
