--- a/demo4.html
+++ b/demo4.html
@@ -55,88 +55,89 @@
   <div id="hint">Double-click untuk fullscreen • Tekan <kbd>F</kbd> untuk toggle • <kbd>Esc</kbd> keluar</div>
 
   <script>
-    !function(window){
-      const host="https://labs.heygen.com",
-      url=host+"/guest/streaming-embed?share=eyJxdWFsaXR5IjoiaGlnaCIsImF2YXRhck5hbWUiOiJBbGVzc2FuZHJhX0Nhc3VhbExvb2tfcHVi"+
-      "bGljIiwicHJldmlld0ltZyI6Imh0dHBzOi8vZmlsZXMyLmhleWdlbi5haS9hdmF0YXIvdjMvMjcw"+
-      "MmVmZjZhZGQxNGI2OTllYjZlNDIwMmVmOTEzNmVfNTU4MDAvcHJldmlld190YXJnZXQud2VicCIs"+
-      "Im5lZWRSZW1vdmVCYWNrZ3JvdW5kIjpmYWxzZSwia25vd2xlZGdlQmFzZUlkIjoiZGVtby0xIiwi"+
-      "dXNlcm5hbWUiOiJmZWY2YzdjYTdkNjk0ODFkYWFkM2JlYzgxMDg0MTRjYyJ9&inIFrame=1";
+  !function(window){
+    const host="https://labs.heygen.com",
+    url=host+"/guest/streaming-embed?share=eyJxdWFsaXR5IjoiaGlnaCIsImF2YXRhck5hbWUiOiJBbGVzc2FuZHJhX0Nhc3VhbExvb2tfcHVi"+
+    "bGljIiwicHJldmlld0ltZyI6Imh0dHBzOi8vZmlsZXMyLmhleWdlbi5haS9hdmF0YXIvdjMvMjcw"+
+    "MmVmZjZhZGQxNGI2OTllYjZlNDIwMmVmOTEzNmVfNTU4MDAvcHJldmlld190YXJnZXQud2VicCIs"+
+    "Im5lZWRSZW1vdmVCYWNrZ3JvdW5kIjpmYWxzZSwia25vd2xlZGdlQmFzZUlkIjoiZGVtby0xIiwi"+
+    "dXNlcm5hbWUiOiJmZWY2YzdjYTdkNjk0ODFkYWFkM2JlYzgxMDg0MTRjYyJ9&inIFrame=1";
 
-      const clientWidth=document.body.clientWidth,
-      wrapDiv=document.createElement("div");
-      wrapDiv.id="heygen-streaming-embed";
+    const clientWidth=document.body.clientWidth;
+    const wrapDiv=document.createElement("div");
+    wrapDiv.id="heygen-streaming-embed";
 
-      const container=document.createElement("div");
-      container.id="heygen-streaming-container";
+    const container=document.createElement("div");
+    container.id="heygen-streaming-container";
 
-      const stylesheet=document.createElement("style");
-      stylesheet.innerHTML=`
-        #heygen-streaming-embed {
-          z-index: 9999;
-          position: fixed;
-          left: 40px;
-          bottom: 40px;
-          width: 200px;
-          height: 200px;
-          border-radius: 50%;
-          border: 2px solid #fff;
-          box-shadow: 0px 8px 24px 0px rgba(0, 0, 0, 0.12);
-          transition: all linear 0.1s;
-          overflow: hidden;
-          opacity: 0;
-          visibility: hidden;
-        }
-        #heygen-streaming-embed.show {
-          opacity: 1;
-          visibility: visible;
-        }
-        #heygen-streaming-embed.expand {
-          ${clientWidth<540
-            ? "height: 266px; width: 96%; left: 50%; transform: translateX(-50%);"
-            : "height: 366px; width: calc(366px * 16 / 9);"}
-          border: 0;
-          border-radius: 8px;
-        }
-        #heygen-streaming-container {
-          width: 100%;
-          height: 100%;
-        }
-        #heygen-streaming-container iframe {
-          width: 100%;
-          height: 100%;
-          border: 0;
-        }
-      `;
+    const stylesheet=document.createElement("style");
+    stylesheet.innerHTML=`
+      #heygen-streaming-embed {
+        z-index: 9999;
+        position: fixed;
+        top: 20px;
+        left: 50%;
+        transform: translateX(-50%);
+        width: 200px;
+        height: 200px;
+        border-radius: 50%;
+        border: 2px solid #fff;
+        box-shadow: 0px 8px 24px 0px rgba(0, 0, 0, 0.12);
+        transition: all linear 0.1s;
+        overflow: hidden;
+        opacity: 0;
+        visibility: hidden;
+      }
+      #heygen-streaming-embed.show {
+        opacity: 1;
+        visibility: visible;
+      }
+      #heygen-streaming-embed.expand {
+        ${clientWidth<540
+          ? "height: 266px; width: 96%; top: 50%; left: 50%; transform: translate(-50%, -50%);"
+          : "height: 366px; width: calc(366px * 16 / 9); top: 50%; left: 50%; transform: translate(-50%, -50%);"}
+        border: 0;
+        border-radius: 8px;
+      }
+      #heygen-streaming-container {
+        width: 100%;
+        height: 100%;
+      }
+      #heygen-streaming-container iframe {
+        width: 100%;
+        height: 100%;
+        border: 0;
+      }
+    `;
 
-      const iframe=document.createElement("iframe");
-      iframe.allowFullscreen=!1;
-      iframe.title="Streaming Embed";
-      iframe.role="dialog";
-      iframe.allow="microphone";
-      iframe.src=url;
+    const iframe=document.createElement("iframe");
+    iframe.allowFullscreen=!1;
+    iframe.title="Streaming Embed";
+    iframe.role="dialog";
+    iframe.allow="microphone";
+    iframe.src=url;
 
-      let visible=!1,initial=!1;
-      window.addEventListener("message",(e=>{
-        if(e.origin===host && e.data && e.data.type==="streaming-embed"){
-          if(e.data.action==="init"){
-            initial=!0;
-            wrapDiv.classList.toggle("show",initial)
-          } else if(e.data.action==="show"){
-            visible=!0;
-            wrapDiv.classList.toggle("expand",visible)
-          } else if(e.data.action==="hide"){
-            visible=!1;
-            wrapDiv.classList.toggle("expand",visible)
-          }
+    let visible=!1,initial=!1;
+    window.addEventListener("message",(e=>{
+      if(e.origin===host&&e.data&&e.data.type==="streaming-embed"){
+        if(e.data.action==="init"){
+          initial=!0;
+          wrapDiv.classList.toggle("show",initial);
+        }else if(e.data.action==="show"){
+          visible=!0;
+          wrapDiv.classList.toggle("expand",visible);
+        }else if(e.data.action==="hide"){
+          visible=!1;
+          wrapDiv.classList.toggle("expand",visible);
         }
-      }));
+      }
+    }));
 
-      container.appendChild(iframe);
-      wrapDiv.appendChild(stylesheet);
-      wrapDiv.appendChild(container);
-      document.body.appendChild(wrapDiv)
-    }(globalThis);
+    container.appendChild(iframe);
+    wrapDiv.appendChild(stylesheet);
+    wrapDiv.appendChild(container);
+    document.body.appendChild(wrapDiv);
+  }(globalThis);
   </script>
 </body>
 </html>
