--- a/demo1.html
+++ b/demo1.html
@@ -21,7 +21,7 @@
       overflow: hidden;
     }
 
-    /* Fullscreen layout default (desktop) */
+    /* Fullscreen layout */
     #heygen-streaming-embed,
     #heygen-streaming-embed.expand {
       position: fixed !important;
@@ -90,7 +90,7 @@
   </style>
 </head>
 <body>
-  <div id="hint">Double‑click untuk fullscreen • Tekan <kbd>F</kbd> untuk toggle • <kbd>Esc</kbd> keluar</div>
+  <div id="hint">Double-click untuk fullscreen • Tekan <kbd>F</kbd> untuk toggle • <kbd>Esc</kbd> keluar</div>
 
   <script>
     !function(window){
@@ -115,16 +115,16 @@
         #heygen-streaming-embed {
           z-index: 9999;
           position: fixed;
-          left: 40px;
-          bottom: 40px;
+          top: 20px;
+          left: 50%;
+          transform: translateX(-50%);
           width: 200px;
           height: 200px;
           border-radius: 50%;
           border: 2px solid #fff;
-          box-shadow: 0px 8px 24px 0px rgba(0, 0, 0, 0.12);
+          box-shadow: 0px 8px 24px rgba(0, 0, 0, 0.12);
           transition: all linear 0.1s;
           overflow: hidden;
-
           opacity: 0;
           visibility: hidden;
         }
@@ -135,8 +135,9 @@
         #heygen-streaming-embed.expand {
           height: 90vh;
           width: 96%;
+          top: 50%;
           left: 50%;
-          transform: translateX(-50%);
+          transform: translate(-50%, -50%);
           border: 0;
           border-radius: 8px;
         }
@@ -144,8 +145,6 @@
           #heygen-streaming-embed.expand {
             height: 366px;
             width: calc(366px * 16 / 9);
-            left: 40px;
-            transform: none;
           }
         }
         #heygen-streaming-container {
@@ -160,28 +159,3 @@
       `;
 
       let visible = false;
-      let initial = false;
-
-      window.addEventListener("message", (e) => {
-        if (e.origin === host && e.data && e.data.type === "streaming-embed") {
-          if (e.data.action === "init") {
-            initial = true;
-            wrapDiv.classList.toggle("show", initial);
-          } else if (e.data.action === "show") {
-            visible = true;
-            wrapDiv.classList.toggle("expand", visible);
-          } else if (e.data.action === "hide") {
-            visible = false;
-            wrapDiv.classList.toggle("expand", visible);
-          }
-        }
-      });
-
-      container.appendChild(iframe);
-      wrapDiv.appendChild(stylesheet);
-      wrapDiv.appendChild(container);
-      document.body.appendChild(wrapDiv);
-    }(globalThis);
-  </script>
-</body>
-</html>
